--- a/Hardhat Contracts and Proxy/package.json
+++ b/Hardhat Contracts and Proxy/package.json
@@ -63,6 +63,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
+    "fhenixjs": "0.3.0",
     "@types/mocha": ">=9.1.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
